# backpropy

./: README.md  Readme_Fadjoint.md  pyproject.toml
backpropy/: gradient.py
backpropy/mnist_for_numpy/: init_mnist.py  mnist.py
backpropy/playground/: demo.py  mnist_test.py  model_playground.py
