[tool.poetry]
name = "backpropy"
version = "0.1.0"
description = ""
authors = ["gehasel <mail@haselbeck.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pathlib = "^1.0.1"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120